re-worked the file set up

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sugar Swears</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lemon|Ubuntu" rel="stylesheet">
@@ -18,28 +19,32 @@ font-family: 'Ubuntu', sans-serif; -->
 		<div class="bubble bOne">
 			<header>
 				<div class="logo-image">
-					<img src="images/sugarswears.png" alt="Logo">
+					<img src="images/SugarSwears.png" alt="Sugar Swears Logo">
 				</div>
 					<h1>For those moments when the F-Bomb just won't do</h1>
 			</header>
+
 			<div class="swears-form-container">
 				<form action="" class="sugarForm">
-					<h3>Anger Level?</h3>
-					<div class="level choice-container">
-						<label class="choice box" for="levelOne"><input type="radio" name="angerLevel" id="levelOne" value="levelOne">Spilled Milk</label>					
-						<label class="choice box" for="levelTwo"><input class="off-screen" type="radio" name="angerLevel" id="levelTwo" value="levelTwo">Stubbed Your Toe</label>				
-						<label class="choice box" for="levelThree"><input type="radio" name="angerLevel" id="levelThree" value="levelThree">Crashed Your Car</label>
-					</div> 	<!-- FIELD SET 1 LEVEL ENDS -->
-
-					<h3>Who's Around?</h3>
-					<div class="audience choice-container">
-						<label class="choice box2" for="family"><input type="radio" name="audience" id="family" value="family">Family</label>					
-						<label class="choice box2" for="coWorkers"><input type="radio" name="audience" id="coWorkers" value="coWorkers">Co-Workers</label>					
-						<label class="choice box2" for="god"><input type="radio" name="audience" id="god" value="god">God</label>	
-					</div> <!-- FIELD SET 2 AUDIENCE ENDS -->
-					<div class="submit-container">
-						<button class="draw meet" type="submit" value="Sweeten Me!">Sweeten Me!</button>
-					</div>
+					<div class="panel">
+						<h3>Anger Level?</h3>
+						<div class="level choice-container">
+							<label class="choice box" for="levelOne"><input type="radio" name="angerLevel" id="levelOne" value="levelOne">Spilled Milk</label>					
+							<label class="choice box" for="levelTwo"><input class="off-screen" type="radio" name="angerLevel" id="levelTwo" value="levelTwo">Stubbed Your Toe</label>				
+							<label class="choice box" for="levelThree"><input type="radio" name="angerLevel" id="levelThree" value="levelThree">Crashed Your Car</label>
+						</div> 	<!-- FIELD SET 1 LEVEL ENDS -->
+					</div> <!-- panel ends -->
+					<div class="panel">
+						<h3>Who's Around?</h3>
+						<div class="audience choice-container">
+							<label class="choice box2" for="family"><input type="radio" name="audience" id="family" value="family">Family</label>					
+							<label class="choice box2" for="coWorkers"><input type="radio" name="audience" id="coWorkers" value="coWorkers">Co-Workers</label>					
+							<label class="choice box2" for="god"><input type="radio" name="audience" id="god" value="god">God</label>	
+						</div> <!-- FIELD SET 2 AUDIENCE ENDS -->
+						<div class="submit-container">
+							<button class="draw meet" type="submit" value="Sweeten Me!">Sweeten Me!</button>
+						</div>
+					</div> <!-- panel ends -->
 				</form>
 				<div class="results resultsPadding">
 					
@@ -51,7 +56,7 @@ font-family: 'Ubuntu', sans-serif; -->
 			<section class="slotMachine">
 				<header>
 				<div class="logo-image">
-					<img src="images/sugarslots.png" alt="Slots logo">
+					<img src="images/sugarslots.png" alt="Sugar Slots logo">
 				</div>
 					<h1>Blow off that steam</h1>
 				</header>
