--- a/index.html
+++ b/index.html
@@ -26,25 +26,27 @@ font-family: 'Ubuntu', sans-serif; -->
 
 			<div class="swears-form-container">
 				<form action="" class="sugarForm">
-					<div class="panel">
-						<h3>Anger Level?</h3>
-						<div class="level choice-container">
-							<label class="choice box" for="levelOne"><input type="radio" name="angerLevel" id="levelOne" value="levelOne">Spilled Milk</label>					
-							<label class="choice box" for="levelTwo"><input class="off-screen" type="radio" name="angerLevel" id="levelTwo" value="levelTwo">Stubbed Your Toe</label>				
-							<label class="choice box" for="levelThree"><input type="radio" name="angerLevel" id="levelThree" value="levelThree">Crashed Your Car</label>
-						</div> 	<!-- FIELD SET 1 LEVEL ENDS -->
-					</div> <!-- panel ends -->
-					<div class="panel">
-						<h3>Who's Around?</h3>
-						<div class="audience choice-container">
-							<label class="choice box2" for="family"><input type="radio" name="audience" id="family" value="family">Family</label>					
-							<label class="choice box2" for="coWorkers"><input type="radio" name="audience" id="coWorkers" value="coWorkers">Co-Workers</label>					
-							<label class="choice box2" for="god"><input type="radio" name="audience" id="god" value="god">God</label>	
-						</div> <!-- FIELD SET 2 AUDIENCE ENDS -->
-						<div class="submit-container">
-							<button class="draw meet" type="submit" value="Sweeten Me!">Sweeten Me!</button>
-						</div>
-					</div> <!-- panel ends -->
+					<div class="questionsContainer">
+						<div class="panel">
+							<h3>Anger Level?</h3>
+							<div class="level choice-container">
+								<label class="choice box" for="levelOne"><input class="off-screen" type="radio" name="angerLevel" id="levelOne" value="levelOne">Spilled Milk</label>					
+								<label class="choice box" for="levelTwo"><input class="off-screen" type="radio" name="angerLevel" id="levelTwo" value="levelTwo">Stubbed Your Toe</label>				
+								<label class="choice box" for="levelThree"><input class="off-screen" type="radio" name="angerLevel" id="levelThree" value="levelThree">Crashed Your Car</label>
+							</div> 	<!-- FIELD SET 1 LEVEL ENDS -->
+						</div> <!-- panel ends -->
+						<div class="panel">
+							<h3>Who's Around?</h3>
+							<div class="audience choice-container">
+								<label class="choice box2" for="family"><input class="off-screen" type="radio" name="audience" id="family" value="family">Family</label>					
+								<label class="choice box2" for="coWorkers"><input class="off-screen" type="radio" name="audience" id="coWorkers" value="coWorkers">Co-Workers</label>					
+								<label class="choice box2" for="god"><input class="off-screen" type="radio" name="audience" id="god" value="god">God</label>	
+							</div> <!-- FIELD SET 2 AUDIENCE ENDS -->
+						</div> <!-- panel ends -->
+					</div>
+					<div class="submit-container">
+						<button class="draw meet" type="submit" value="Sweeten Me!">Sweeten Me!</button>
+					</div>
 				</form>
 				<div class="results resultsPadding">
 					
@@ -76,7 +78,7 @@ font-family: 'Ubuntu', sans-serif; -->
 	</main>
 		<footer>
 			<div>
-				<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Hello%20world" data-size="large">Tweet</a>
+				<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Sugar%20Swears!%20For%20Those%20moments%20when%20the%20f-bomb%20just%20wont%20do.%20By%20@LOCnCode%20@atlauraduggan" data-size="large">Tweet</a>
 			</div>
 			<div>
 				<p>&copy; <a href="https://twitter.com/atlauraduggan" target="_blank">Laura Duggan</a> & <a href="https://twitter.com/LOCnCode" target="_blank">Laurie OConnor</a></p>
